-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.1, 5.5.0
-
None
-
iOS 5.1.1
-
-
f3a07360dd5a7b8e8b13217b08a952a1584e8101
The QAudioOutput and QAudioInput device crashes on iOS 5.1.1 because the "CoreAudioSessionManager.mm" uses constants and methods which are only available starting with iOS 6.
The problem could be fixed by adding a version check for the affected constants and methods (which are only a few in number).
Here are some examples which are only available with iOS 6:
- AVAudioSessionMediaServicesWereResetNotification
- AVAudioSessionCategoryMultiRoute
- setCategory:targetCategory withOptions:options error:nil];
| For Gerrit Dashboard: QTBUG-44790 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 110187,2 | CoreAudio: fix crash on iOS 5. | 5.4 | qt/qtmultimedia | Status: MERGED | +2 | 0 |